theme: fix double scrolling
Double scrollbar was being shown under some circumstances.

--- a/sphinx_ncs_theme/static/css/nordic.css
+++ b/sphinx_ncs_theme/static/css/nordic.css
@@ -5,6 +5,10 @@
  * Base
  ******************************************************************************/
 
+body, html {
+  overflow-x: unset;
+}
+
 a {
   color: #00a9ce !important;
   text-decoration: unset !important;
